# metal-cpp-rendering-boilerplate

./: .gitmodules  LICENSE.txt  README.md  boilerplate_config.hpp.in  code_format.sh  dependencies.cmake  template.cpp  template.hpp
3party/imgui/: CMakeLists.txt
assets/: rokuz.icns
common/: CMakeLists.txt  app.hpp  glm_math.hpp  imgui_metal.cpp  main.mm  metal_impl.cpp  semaphore.hpp  semaphore.mm  threads.hpp  threads.mm  utils.hpp
